--- a/resources/sass/styles/icomoon.scss
+++ b/resources/sass/styles/icomoon.scss
@@ -25,11 +25,17 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-logo:before {
-  content: "\e900";
+.icon-pilot:before {
+  content: "\e904";
+}
+.icon-user:before {
+  content: "\e905";
 }
 .icon-moon:before {
   content: "\e901";
+}
+.icon-logo:before {
+  content: "\e900";
 }
 .icon-dark-light:before {
   content: "\e902";
