--- a/resources/sass/styles/icomoon.scss
+++ b/resources/sass/styles/icomoon.scss
@@ -25,6 +25,24 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-arrow-right:before {
+  content: "\e90b";
+}
+.icon-login:before {
+  content: "\e906";
+}
+.icon-logout:before {
+  content: "\e907";
+}
+.icon-user-add:before {
+  content: "\e908";
+}
+.icon-user-menu:before {
+  content: "\e909";
+}
+.icon-guest:before {
+  content: "\e90a";
+}
 .icon-pilot:before {
   content: "\e904";
 }
