--- a/resources/sass/styles/icomoon.scss
+++ b/resources/sass/styles/icomoon.scss
@@ -43,21 +43,54 @@
 .icon-guest:before {
   content: "\e90a";
 }
-.icon-pilot:before {
-  content: "\e904";
-}
 .icon-user:before {
   content: "\e905";
 }
 .icon-moon:before {
   content: "\e901";
 }
-.icon-logo:before {
-  content: "\e900";
-}
 .icon-dark-light:before {
   content: "\e902";
 }
 .icon-sun:before {
   content: "\e903";
+}
+.icon-facebook:before {
+  content: "\e90c";
+}
+.icon-instagram:before {
+  content: "\e90d";
+}
+.icon-youtube:before {
+  content: "\e90e";
+}
+.icon-twitch:before {
+  content: "\e90f";
+}
+.icon-twitter:before {
+  content: "\e910";
+}
+.icon-whatsapp:before {
+  content: "\e911";
+}
+.icon-discord:before {
+  content: "\e912";
+}
+.icon-telegram:before {
+  content: "\e913";
+}
+.icon-steam:before {
+  content: "\e914";
+}
+.icon-xbox:before {
+  content: "\e915";
+}
+.icon-playstation:before {
+  content: "\e916";
+}
+.icon-logo:before {
+  content: "\e900";
+}
+.icon-pilot:before {
+  content: "\e904";
 }
