working in user account views

--- a/resources/sass/styles/icomoon.scss
+++ b/resources/sass/styles/icomoon.scss
@@ -43,6 +43,12 @@
 .icon-gtracing:before {
   content: "\e90c";
 }
+.icon-invisible:before {
+  content: "\e91d";
+}
+.icon-visible:before {
+  content: "\e91e";
+}
 .icon-arrow-right:before {
   content: "\e90d";
 }
