--- a/resources/sass/styles/theme.scss
+++ b/resources/sass/styles/theme.scss
@@ -1,3 +1,20 @@
+.loader {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 45;
+    clip-path: circle(150% at 100% 0);
+    transition: clip-path 0.8s ease-in-out;
+}
+.loader-off {
+    clip-path: circle(0% at 100% 100%);
+}
+
 .scrollbar-thin::-webkit-scrollbar {
     width: 10px;
     height: 10px;
