many design changes

--- a/resources/sass/styles/icomoon.scss
+++ b/resources/sass/styles/icomoon.scss
@@ -214,41 +214,44 @@
 .icon-bookmark-add:before {
   content: "\e94d";
 }
+.icon-reclamation:before {
+  content: "\e94e";
+}
 .icon-pilot:before {
   content: "\e904";
 }
 .icon-race_live:before {
-  content: "\e94e";
-}
-.icon-multimedia:before {
   content: "\e94f";
 }
-.icon-qualy:before {
+.icon-multimedia:before {
   content: "\e950";
 }
-.icon-race:before {
+.icon-qualy:before {
   content: "\e951";
 }
-.icon-circuit:before {
+.icon-race:before {
   content: "\e952";
+}
+.icon-circuit:before {
+  content: "\e953";
 }
 .icon-logo:before {
   content: "\e900";
 }
 .icon-logo2:before {
-  content: "\e953";
-}
-.icon-brand-xbox:before {
   content: "\e954";
 }
-.icon-brand-playstation:before {
+.icon-brand-xbox:before {
   content: "\e955";
 }
-.icon-brand-pcgame:before {
+.icon-brand-playstation:before {
   content: "\e956";
 }
-.icon-fifa:before {
+.icon-brand-pcgame:before {
   content: "\e957";
+}
+.icon-fifa:before {
+  content: "\e958";
 }
 .icon-efootball:before {
   content: "\e90b";
@@ -290,14 +293,14 @@
   content: "\e918";
 }
 .icon-pos-med:before {
-  content: "\e958";
-}
-.icon-pos-del:before {
   content: "\e959";
 }
-.icon-pos-def:before {
+.icon-pos-del:before {
   content: "\e95a";
 }
-.icon-pos-por:before {
+.icon-pos-def:before {
   content: "\e95b";
+}
+.icon-pos-por:before {
+  content: "\e95c";
 }
