--- a/resources/sass/styles/theme.scss
+++ b/resources/sass/styles/theme.scss
@@ -13,7 +13,8 @@
 }
 .loader-off {
     clip-path: circle(0% at 100% 100%);
-    display: none;
+    // display: none;
+    z-index: 0;
 }
 
 .scrollbar-thin::-webkit-scrollbar {
