--- a/resources/sass/styles/theme.scss
+++ b/resources/sass/styles/theme.scss
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     z-index: 45;
@@ -13,8 +13,6 @@
 }
 .loader-off {
     clip-path: circle(0% at 100% 100%);
-    // display: none;
-    z-index: 0;
 }
 
 .scrollbar-thin::-webkit-scrollbar {
