--- a/resources/sass/styles/fonts.scss
+++ b/resources/sass/styles/fonts.scss
@@ -4,6 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
 //condensed
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap');
 // script
 @import url('https://fonts.googleapis.com/css2?family=Bad+Script&display=swap');
 
