--- a/resources/sass/styles/theme.scss
+++ b/resources/sass/styles/theme.scss
@@ -52,3 +52,12 @@
         background-color: rgba(33, 46, 54, 0.5);
     }
 }
+
+#btn-back-to-top {
+    position: fixed;
+    display: none;
+}
+
+html {
+    scroll-behavior: smooth;
+}
